@@ -19,6 +19,7 @@ package org.apache.arrow.flight;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
@@ -429,6 +430,17 @@ public class FlightClient implements AutoCloseable {
       return writer;
     }
 
+    /**
+     * Make sure stream is drained. You must call this to be notified of any errors that may have
+     * happened after the exchange is complete. This should be called after `getWriter().completed()`
+     * and instead of `getWriter().getResult()`.
+     */
+    public void getResult() {
+      // After exchange is complete, make sure stream is drained to propagate errors through reader
+      while (reader.next()) {
+      }
+    }
+
     /** Shut down the streams in this call. */
     @Override
     public void close() throws Exception {
@@ -617,6 +629,7 @@ public class FlightClient implements AutoCloseable {
   /**
    * Shut down this client.
    */
+  @Override
   public void close() throws InterruptedException {
     channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
     allocator.close();
@@ -736,19 +749,24 @@ public class FlightClient implements AutoCloseable {
             try {
               // Linux
               builder.channelType(
-                  (Class<? extends ServerChannel>) Class.forName("io.netty.channel.epoll.EpollDomainSocketChannel"));
-              final EventLoopGroup elg = (EventLoopGroup) Class.forName("io.netty.channel.epoll.EpollEventLoopGroup")
-                  .newInstance();
+                  Class.forName("io.netty.channel.epoll.EpollDomainSocketChannel")
+                      .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg =
+                  Class.forName("io.netty.channel.epoll.EpollEventLoopGroup").asSubclass(EventLoopGroup.class)
+                  .getDeclaredConstructor().newInstance();
               builder.eventLoopGroup(elg);
             } catch (ClassNotFoundException e) {
               // BSD
               builder.channelType(
-                  (Class<? extends ServerChannel>) Class.forName("io.netty.channel.kqueue.KQueueDomainSocketChannel"));
-              final EventLoopGroup elg = (EventLoopGroup) Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup")
-                  .newInstance();
+                  Class.forName("io.netty.channel.kqueue.KQueueDomainSocketChannel")
+                      .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg = Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup")
+                  .asSubclass(EventLoopGroup.class)
+                  .getDeclaredConstructor().newInstance();
               builder.eventLoopGroup(elg);
             }
-          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException |
+                   NoSuchMethodException | InvocationTargetException e) {
             throw new UnsupportedOperationException(
                 "Could not find suitable Netty native transport implementation for domain socket address.");
           }
